# runcost

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIVE_EVALUATION_PROTOCOL.md  PRODUCT_REQUIREMENTS.md  PROGRESS_TRACKER.md  PROJECT_PLAN.md  README.md  RESULTS_MATRIX.md  SECURITY.md  SUPPORT.md  VALIDATION_REPORT.md  go.mod  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: 2026-05-25-aggregation-and-streaming.md  2026-05-25-api-reference.md  2026-05-25-fixture-coverage.md  2026-05-25-package-installation.md  2026-05-25-quickstart.md  2026-05-25-source-adapters.md  2026-05-25-supported-surfaces.md  2026-05-25-warnings-and-limitations.md  API_PARITY_MATRIX.md  FRAMEWORK_ADAPTER_NOTES.md  POLYGLOT_TOOLCHAIN_DECISION.md  PROVIDER_EXTRACTOR_NOTES.md  README.md
examples/: javascript_basic.mjs  javascript_framework_adapters.mjs  python_basic.py  python_framework_adapters.py
fixtures/: README.md  ag2-usage-summary-actual.json  ag2-usage-summary-total.json  anthropic-messages-raw-cache-1h.json  anthropic-messages-raw-cache.json  anthropic-messages-stream-events.json  azure-openai-chat-raw-reasoning.json  bedrock-converse-raw-cache.json  bedrock-invoke-model-anthropic-messages.json  byte-stable-component-ordering.json  byte-stable-price-card-tie-break.json  cohere-chat-raw-meta-billed-units.json  cohere-chat-raw-usage-billed-units.json  cohere-rerank-raw-billed-units.json  cost-ledger-aggregation-basic.json  debug-trace-explain-decisions.json  decimal-arithmetic-adversarial.json  deepseek-chat-raw-cache-reasoning.json  discount-not-applied-warning.json  discount-policy-openai-basic.json  effective-date-selection.json  feature-component-unpriced-warning.json  feature-pricing-generated-media-rerank-transcription.json  gemini-generate-content-raw-multimodal.json  gemini-generate-content-raw-reasoning-cache.json  gemini-generate-content-stream-chunks.json  groq-chat-raw-cache.json  haystack-openai-chat-generator-meta.json  helicone-adapter-basic.json  historical-price-missing-warning.json  huggingface-chat-raw-basic.json  inclusive-usage-ambiguous-warning.json  langchain-callback-context-manager.json  langchain-chat-message-usage-metadata.json  langsmith-export-cost-compare.json  langsmith-run-usage-metadata.json  litellm-adapter-basic.json  litellm-proxy-response-cost-metadata.json  llamaindex-token-counter-events.json  llm-prices-adapter-basic.json  (+67 more)
schemas/: alpha-smoke-product-truth-register.schema.json  alpha-smoke-report.schema.json  cost-ledger.schema.json  debug-trace.schema.json  discount-policy.schema.json  fixture.schema.json  invoice-dashboard-comparison-input.schema.json  (+8 more)
(+114 files in other folders)
