[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "runcost"
version = "0.0.0"
description = "Prototype cost calculator for LLM and agent API responses."
requires-python = ">=3.9"
readme = "README.md"
keywords = ["llm", "ai", "pricing", "tokens", "cost"]

[project.urls]
Homepage = "https://github.com/adamallcock/runcost"
Repository = "https://github.com/adamallcock/runcost"
Issues = "https://github.com/adamallcock/runcost/issues"

[tool.setuptools.packages.find]
where = ["packages/python"]
