[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "runcost-ai"
version = "0.1.1"
description = "Alpha cost ledger utility for LLM and agent API responses."
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["llm", "ai", "pricing", "tokens", "cost", "agents", "openai", "anthropic", "usage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/adamallcock/runcost"
Repository = "https://github.com/adamallcock/runcost"
Issues = "https://github.com/adamallcock/runcost/issues"
Changelog = "https://github.com/adamallcock/runcost/blob/main/CHANGELOG.md"

[project.scripts]
runcost = "runcost.cli:main"

[project.optional-dependencies]
smoke = [
  "langchain-core",
  "langchain-openai"
]

[tool.setuptools.packages.find]
where = ["packages/python"]
